# code_agent

./: .env  .gitignore  README.md  agent.py  api_server.py  package-lock.json  package.json  pyproject.toml  requirements.txt  start.sh
components/: background_manager.py  compactor.py  config.py  error_recovery.py  event_bus.py  memory_manager.py  message_bus.py  safety_manager.py  skill_loader.py  task_manager.py  team_manager.py  todo_manager.py  worktree_manager.py
core/: loop.py  subagent.py
frontend/: package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/chat/: ApprovalBanner.tsx  ChatInput.tsx  ChoicePanel.tsx  MessageBubble.tsx  PlanReview.tsx  ToolTimeline.tsx
frontend/src/components/panels/: FilePreview.tsx  FileTree.tsx  ProgressPanel.tsx  SafetyPanel.tsx  Sidebar.tsx  TaskBoard.tsx  TeamPanel.tsx  TodoPanel.tsx
frontend/src/components/ui/: Button.tsx  ContextPanel.tsx  StatusBar.tsx  ThemeToggle.tsx
frontend/src/hooks/: useAgentSocket.ts  useChat.ts
frontend/src/lib/: api.ts  icons.ts  theme.ts  types.ts  utils.ts
src/: main.py
src/core/: graph.py  state.py
src/memory/: manager.py
src/models/: factory.py
src/security/: permissions.py
src/tools/: filesys.py  knowledge.py  memory_tools.py  terminal.py
src/utils/: prompt_manager.py
tools/: __init__.py  background.py  base.py  compress.py  memory.py  protocols.py  safety.py  skill.py  task_board.py  team.py  todo.py  worktree.py
